src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-dhF500-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]
